--- a/LightFreeStroboscope/Base.lproj/Main.storyboard
+++ b/LightFreeStroboscope/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D89-FB-fvn">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="20" width="367" height="44"/>
                                 <items>
                                     <navigationItem title="How to use" id="TYC-dL-KVg">
                                         <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="ndd-Oh-p1F">
@@ -35,7 +35,11 @@
                                 </items>
                             </navigationBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blah blah blah" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3gw-p8-3KB">
-                                <rect key="frame" x="36" y="264" width="302" height="139"/>
+                                <rect key="frame" x="32" y="-93" width="302" height="139"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="302" id="9g9-aE-CX2"/>
+                                    <constraint firstAttribute="height" constant="139" id="dxF-sb-IaY"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="43"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -43,13 +47,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="zMl-ap-8CC" firstAttribute="top" secondItem="3gw-p8-3KB" secondAttribute="bottom" constant="264" id="0j4-Nl-Wvf"/>
-                            <constraint firstItem="D89-FB-fvn" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leading" id="2H6-ne-jEV"/>
-                            <constraint firstItem="D89-FB-fvn" firstAttribute="top" secondItem="BAG-IF-stq" secondAttribute="bottom" id="G7e-K6-tpf"/>
-                            <constraint firstItem="D89-FB-fvn" firstAttribute="centerX" secondItem="3gw-p8-3KB" secondAttribute="centerX" id="bqj-4B-5JV"/>
-                            <constraint firstItem="3gw-p8-3KB" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leadingMargin" constant="20" id="feq-R8-ZY0"/>
-                            <constraint firstAttribute="trailing" secondItem="D89-FB-fvn" secondAttribute="trailing" id="qkN-Nu-aAO"/>
-                            <constraint firstItem="3gw-p8-3KB" firstAttribute="centerY" secondItem="suv-xQ-gUw" secondAttribute="centerY" id="zfM-4s-Jbi"/>
+                            <constraint firstItem="D89-FB-fvn" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leading" id="Bk1-48-p0N"/>
+                            <constraint firstItem="3gw-p8-3KB" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leadingMargin" constant="16" id="W4e-gS-NAU"/>
+                            <constraint firstItem="D89-FB-fvn" firstAttribute="top" secondItem="BAG-IF-stq" secondAttribute="bottom" id="Y54-gP-viL"/>
+                            <constraint firstItem="D89-FB-fvn" firstAttribute="centerX" secondItem="3gw-p8-3KB" secondAttribute="centerX" id="obQ-yy-mbU"/>
+                            <constraint firstItem="zMl-ap-8CC" firstAttribute="top" secondItem="3gw-p8-3KB" secondAttribute="bottom" constant="621" id="xUh-Kr-8CO"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -69,50 +71,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="btb-Yo-yYO">
-                                <rect key="frame" x="143.5" y="61" width="89" height="34"/>
-                                <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="0.5" colorSpace="calibratedRGB"/>
-                                <attributedString key="attributedText">
-                                    <fragment content="0 RPM">
-                                        <attributes>
-                                            <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" size="29" name=".SFNSDisplay"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K2c-Xv-gFL">
-                                <rect key="frame" x="151" y="20" width="73" height="33"/>
-                                <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="0.5" colorSpace="calibratedRGB"/>
-                                <attributedString key="attributedText">
-                                    <fragment content="10 Hz">
-                                        <attributes>
-                                            <color key="NSBackgroundColor" red="1" green="0.0" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
-                                            <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" size="28" name=".SFNSDisplay"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoDark" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NTJ-7H-QYI">
-                                <rect key="frame" x="325" y="35" width="22" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NTJ-7H-QYI">
+                                <rect key="frame" x="343" y="635" width="22" height="22"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <segue destination="byb-dx-8ni" kind="presentation" id="cuV-tu-8vN"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K2c-Xv-gFL">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="92"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.25" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="SwI-7n-Eva"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="9.23 Hz">
+                                        <attributes>
+                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <font key="NSFont" size="36" name="AvenirNext-Regular"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="truncatingTail" baseWritingDirection="natural" paragraphSpacingBefore="20" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="btb-Yo-yYO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7nk-9g-E2M"/>
-                            <constraint firstItem="K2c-Xv-gFL" firstAttribute="centerX" secondItem="btb-Yo-yYO" secondAttribute="centerX" id="YhS-or-AEh"/>
-                            <constraint firstItem="btb-Yo-yYO" firstAttribute="top" secondItem="K2c-Xv-gFL" secondAttribute="bottom" constant="8" symbolic="YES" id="qDc-4s-RVT"/>
-                            <constraint firstItem="K2c-Xv-gFL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="vd8-vS-95s"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="NTJ-7H-QYI" secondAttribute="bottom" constant="10" id="0Uj-u7-xo9"/>
+                            <constraint firstItem="NTJ-7H-QYI" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" constant="-10" id="0ta-Cd-CgN"/>
+                            <constraint firstItem="K2c-Xv-gFL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Fxf-KZ-feW"/>
+                            <constraint firstItem="K2c-Xv-gFL" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cZ9-vg-XMV"/>
+                            <constraint firstAttribute="trailing" secondItem="K2c-Xv-gFL" secondAttribute="trailing" id="wDg-RF-CTi"/>
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="pb9-wJ-OAG" appends="YES" id="n5w-aV-qEd"/>
@@ -126,7 +117,6 @@
                         <outlet property="leftSwipeRecog" destination="5Ec-yW-E17" id="hcP-zf-Fo0"/>
                         <outlet property="panRecog" destination="pb9-wJ-OAG" id="HOK-Pd-hMb"/>
                         <outlet property="rightSwipeRecog" destination="iAh-zg-Kib" id="Ud4-Le-35k"/>
-                        <outlet property="rpmLabel" destination="btb-Yo-yYO" id="xvv-gx-ps6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -149,7 +139,7 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="61.600000000000001" y="42.728635682158924"/>
+            <point key="canvasLocation" x="56.799999999999997" y="40.029985007496258"/>
         </scene>
     </scenes>
 </document>
