--- a/LightFreeStroboscope/Base.lproj/Main.storyboard
+++ b/LightFreeStroboscope/Base.lproj/Main.storyboard
@@ -133,7 +133,7 @@
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K2c-Xv-gFL">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.25" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="SwI-7n-Eva"/>
                                 </constraints>
@@ -148,6 +148,17 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GRh-fv-0Z5">
+                                <rect key="frame" x="20" y="627" width="41" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="bx8-L7-zae"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <state key="normal" title="Flash"/>
+                                <connections>
+                                    <action selector="FlashToggle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cpp-Jm-fkg"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
@@ -155,7 +166,9 @@
                             <constraint firstItem="NTJ-7H-QYI" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" constant="-10" id="0ta-Cd-CgN"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="NTJ-7H-QYI" secondAttribute="bottom" constant="10" id="C5O-cB-LWn"/>
                             <constraint firstItem="K2c-Xv-gFL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Fxf-KZ-feW"/>
+                            <constraint firstItem="GRh-fv-0Z5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="auj-uD-FzB"/>
                             <constraint firstItem="K2c-Xv-gFL" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cZ9-vg-XMV"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="GRh-fv-0Z5" secondAttribute="bottom" constant="10" id="nv5-GD-lCL"/>
                             <constraint firstAttribute="trailing" secondItem="K2c-Xv-gFL" secondAttribute="trailing" id="wDg-RF-CTi"/>
                         </constraints>
                         <connections>
